tests/fixtures/invalid/bool_rshift_dict.py
# Cannot right shift Bool and Dict[str, int]
x: bool = True >> {"a": 1}
